<resources>
    <string name="app_name">PTC</string>
    <string name="login_text">Login</string>
    <string name="signup_text">Sign Up</string>
    <string name="email_text">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password_text">Password</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="ptc">PTC</string>
    <string name="ptc_abbr">Pet Trade &amp; Care</string>
    <string name="or">OR</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="not_a_member">Not a member? Sign Up</string>
    <string name="already_member">Already a member? Log In</string>
    <string name="log_out">Log Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="post">Post</string>
    <string name="store">Store</string>
    <string name="settings">Settings</string>
    <string name="text1">Find your</string>
    <string name="text2">Lovely Pet everywhere</string>
    <string name="cats">Cat</string>
    <string name="dogs">Dog</string>
    <string name="birds">Bird</string>
    <string name="newest">NEWEST</string>
    <string name="new_post">New Post</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="location">Location</string>
    <string name="type">Type…</string>
    <string name="enter_message_to_send">Enter Message to send</string>
    <string name="user_name">User Name</string>
    <string name="phone">Phone</string>
    <string name="update">Update</string>
    <string name="phone_number">Phone Number</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="bunnies">Bunnies</string>
    <string-array name="category">
        <item>Dog</item>
        <item>Cat</item>
        <item>Bird</item>
        <item>Bunny</item>
        <item>Others</item>
    </string-array>
</resources>
