<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logInScreenLogo"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:src="@drawable/ptc_logo_white_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/email_text"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logInScreenLogo"
                app:startIconDrawable="@drawable/ic_baseline_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/password_text"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                app:layout_constraintTop_toBottomOf="@+id/emailTextLayout"
                app:startIconDrawable="@drawable/ic_baseline_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:text="@string/login_text"
                app:cornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordTextLayout" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_margin="40dp"
                app:dividerColor="@color/primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signInButton" />

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_mono_bold"
                android:text="@string/or"
                android:textColor="@color/primary"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signInButton" />

            <TextView
                android:id="@+id/sing_up_with"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/sign_in_with"
                android:textColor="@color/primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />


            <TextView
                android:id="@+id/gotoSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/not_a_member"
                android:textColor="@color/primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/googleSignIn" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/googleSignIn"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/google"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:backgroundTint="@color/grey"
                app:cornerRadius="10dp"
                app:icon="@drawable/google"
                app:iconSize="15dp"
                app:iconTint="@null"
                app:layout_constraintEnd_toStartOf="@+id/facebook"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sing_up_with" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/facebook"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/facebook"
                android:textAllCaps="false"
                app:backgroundTint="@color/facebook"
                app:cornerRadius="10dp"
                app:icon="@drawable/facebook"
                app:iconSize="15dp"
                app:iconTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/googleSignIn"
                app:layout_constraintTop_toBottomOf="@id/sing_up_with" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</LinearLayout>